# TEKA3003-miniprojekti

./: .coverage  .gitignore  .pylintrc  LICENSE.md  README.md  log.html  output.xml  pyproject.toml  references.txt  report.html  retro.md  viitteet.json
.github/workflows/: main.yml
src/: MainLibrary.py  downloaded_robot.json  log.html  main.py  mainLibrary.py  output.xml  references.bib  report.html  stub_io.py  viite.py  viiteRepository.py  viitteet.json
src/robotTests/: doi.robot  dropBox.robot  main.robot  resource.robot  viiteRepository.robot
src/tests/: main_test.py  viiteRepository_test.py  viite_test.py
tests/: esimerkki_test.py  main_test.py  viiteRepository_test.py
