[project]
name = "teka3003-miniprojekti"
version = "0.1.0"
description = "Miniprojekti TEKA3003-kurssille"
authors = [
    { name = "Jimi Kortelainen" },
    { name = "Panu Leppänen" },
    { name = "Ville Salonen" },
    { name = "Joonas Paasovaara" },
    { name = "Paulus Kopperoinen" }
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pylint (>=4.0.3,<5.0.0)",
    "coverage (>=7.12.0,<8.0.0)",
    "robotframework (>=7.3.2,<8.0.0)"
]
